Modified travis so it doesn't push to AWS

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,16 +22,16 @@ after_success:
   - docker push jnalewabau/multi-server
   - docker push jnalewabau/multi-worker
 
-deploy:
-  provider: elasticbeanstalk
-  region: us-west-2
-  app: multi-docker
-  env: MultiDocker-env
-  bucket_name: elasticbeanstalk-us-west-2-017078724186
-  bucket_path: docker-multi
-  on:
-    branch: master
-  access_key_id: 
-    secure: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: $AWS_SECRET_KEY
+# deploy:
+#  provider: elasticbeanstalk
+#  region: us-west-2
+#  app: multi-docker
+#  env: MultiDocker-env
+#  bucket_name: elasticbeanstalk-us-west-2-017078724186
+#  bucket_path: docker-multi
+#  on:
+#    branch: master
+#  access_key_id: 
+#    secure: $AWS_ACCESS_KEY
+#  secret_access_key:
+#    secure: $AWS_SECRET_KEY
